fixing overflow

--- a/style.css
+++ b/style.css
@@ -2,7 +2,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
+body {
+    overflow-x: hidden;
+}
+  
 .main1{
     height: 100vh;
     overflow: hidden;
